# Client-Server-Simulation

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
resultados/: G1plots.plt  TablaResultados.ods  incremento-FIJO-Tlleg:0.15-Tserv0.1.txt  incremento-FIJO-Tlleg:0.3-Tserv0.2.txt  incremento-FIJO-Tlleg:0.6-Tserv0.4.txt  incremento-FIJO-Tlleg:1.5-Tserv1.txt  incremento-FIJO-Tlleg:15-Tserv10.txt  incremento-FIJO-Tlleg:540-Tserv360.txt  incremento-FIJO-Tlleg:9-Tserv6.txt  incremento-FIJO-Tlleg:90-Tserv60.txt  incremento-VARIABLE-Tlleg:0.15-Tserv0.1.txt  incremento-VARIABLE-Tlleg:0.3-Tserv0.2.txt  incremento-VARIABLE-Tlleg:0.6-Tserv0.4.txt  incremento-VARIABLE-Tlleg:1.5-Tserv1.txt  incremento-VARIABLE-Tlleg:15-Tserv10.txt  incremento-VARIABLE-Tlleg:540-Tserv360.txt  incremento-VARIABLE-Tlleg:9-Tserv6.txt  incremento-VARIABLE-Tlleg:90-Tserv60.txt
scripts/: runAll.sh
src/: cliente_servidor.cpp  cliente_servidor_variable.cpp
